@@ -1,6 +1,8 @@
 
-2010-08-24  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2010-08-25  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* setup.py pyclewn_install.py autoload/pyclewn.vim: Fix the :Pyclewn
+	command does not work on Windows.
 	* vim.py setup.py pyclewn_install.py: Use the standard layout for vim
 	runtime files (Sergey Khorev).
 	* vim.py netbeans.py buffer.py: Add a new option to the command line
